# AGA8

./: .travis.yml  LICENSE  README.md  _config.yml  index.md
1994AGA8/: 1994AGA8.doc  AGA8PROG.FOR  CONF.SAV  DETAILXZ.FOR  GROSSXZ.FOR  UNITS.FOR
AGA8CODE/: AGA8.XLS
AGA8CODE/C/: CMakeLists.txt  Detail.cpp  Detail.h  Detail_test.cpp  Detail_test_01.cpp  GERG2008.cpp  GERG2008_test_01.cpp  Gross.cpp  Gross.h  Gross_test_01.cpp
AGA8CODE/C/docker/: Dockerfile  README.md  docker-compose.yml
AGA8CODE/FORTRAN/: DETAIL.CMN  DETAIL.FOR  GERG2008.CMN  GERG2008.FOR  GROSS.CMN  GROSS.FOR
AGA8CODE/JS/: DETAIL.js  EoS_test.html  GERG2008.js  GROSS.js  Globals.js  index.html
AGA8CODE/JS/Example Of Implementation/: 00_Globals.js  01_Index.js  03_GROSS.js  04_DETAIL.js  05_AUTREADINGBOX.js  06_DRAWINGS.js  README.md  index.html
AGA8CODE/RUST/: Cargo.toml  README.md
AGA8CODE/RUST/examples/: demo.rs  gerg_demo.rs
AGA8CODE/RUST/src/: aga8.rs  detail.rs  gerg2008.rs  lib.rs
AGA8CODE/RUST/tests/: gerg-tests.rs  integration-tests.rs
AGA8CODE/VB/: AGA8.VBP  AGA8.VBW  AGA8.frm  DETAIL.BAS  GERG2008.BAS  GROSS.BAS
TESTDATA/: Deviation Calculator.xls  NG Compositions.XLS  Tables.xls  Test Data.xls
_includes/: NISTPagesHeader.html
_layouts/: default.html
